--- a/UCSC_Course_Planner/templates/dashboard.html
+++ b/UCSC_Course_Planner/templates/dashboard.html
@@ -553,15 +553,7 @@
     <div class="modal-body">
 
         <div id="classToRemove">AMS2000</div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+
     </div>
     <div class="modal-footer">
         <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
@@ -717,7 +709,7 @@
 
 
                                                     <li class="ui-state-default" id="{{ class }}{{ quarter }}{{ year }}">
-                                                        <div class="classHeader">{{ class }} <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right" style="display:none;"><i class="icon-minus-sign"></i></span><br></div>
+                                                        <div class="classHeader">{{ class }} <span class="classUnits badge badge-success">5</span><span class="courseRemove pull-right" style="display:none;"><i class="courseRemove pull-right icon-minus-sign"></i></span><br></div>
                                                         <div class="classInstructor">Instructor Name<br></div>
                                                         <div class="classTime">MWF 12-2pm<br></div>
                                                     </li>
