Fixed a werid bug with progress that I already fixed?
Also working on log in page

--- a/UCSC_Course_Planner/templates/404.html
+++ b/UCSC_Course_Planner/templates/404.html
@@ -108,7 +108,7 @@
         <p class="lead">We can't find what you're looking for.<br> Sorry about that.</p>
         </div >
 
-        <img src="/static/img/django{{ dognum }}.JPG" style="zoom: 20%;" class="img-circle">
+        <img src="/static/img/django{{ dognum }}.jpg" style="zoom: 20%;" class="img-circle">
          <br>Here's a picture of a dog. Hope this mitigates your pain.
         </div>
     </div>
