--- a/UCSC_Course_Planner/templates/login.html
+++ b/UCSC_Course_Planner/templates/login.html
@@ -92,8 +92,9 @@
     <form class="form-signin">
         <h2 class="form-signin-heading">{% if is_logged_in %}Thanks for logging in!{% else %}Please log in.{% endif %}</h2>
 {#        <p> {{ name }}</p>#}
-        <p>{{  greeting|safe }}</p>
-
+        <p><a href="{{  greeting|safe }}">Sign in with Google <br> <img src="/static/img/google.gif">
+        </a></p>
+	    
         {% if is_logged_in %} <button class="btn btn-medium btn-primary" type="button" onclick="self.location='{{  logoutURL|safe }}'"> Logout </button> {% endif %}
 {#        <input type="text" class="input-block-level" placeholder="Email address">#}
 {#        <input type="password" class="input-block-level" placeholder="Password">#}
