Added a Help Page

--- a/UCSC_Course_Planner/templates/help.html
+++ b/UCSC_Course_Planner/templates/help.html
@@ -49,9 +49,9 @@
                     {% else %}
                     <li><a href="/">Home</a></li>
                     {% endif %}
-                    <li class="active"><a href="/About">About</a></li>
+                    <li class=""><a href="/About">About</a></li>
                     <li><a href="/Contact">Contact</a></li>
-                    <li ><a href="/help">Help</a></li>
+                    <li class="active"><a href="/help">Help</a></li>
                 </ul>
                 
                 <form class="navbar-form pull-right">
@@ -71,18 +71,44 @@
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="row">
         <div class="hero-unit">
-            <h1>About </h1>
+            <h1>We are here to help! </h1>
+<!-- 
             <p>Just trying to ease the college experience :)</p>
+ -->
         </div>
-        <div class="span5">
-        <h2>We'd like to thank: </h2>
-        <ul>
+        <div class="span8">
+        <body>
+		<h2>Frequently Asked Questions: </h2>
+		<hr>
+		<h4> Wait my major isn't listed? What gives?</h4>
+		<p>
+		We currently only implemented a few majors from Baskin School of Engineering
+		because it was easy to crawl their web directory. We'd love to actually make this
+		work for the entire school though.
+		</p>
+		<br>
+		<h4> How do I add or remove a minor or major?</h4>
+		<p> From the Dashboard page, go to the top toolbar and click <button href="#" class="btn  btn-small" id="edit"><span class="ui-button-text">Edit</span> <i class="icon-pencil"></i></button>
+		and then from the major/minor section on the left side of the page, select <a class="btn btn-small" href="/#" id="changeMajor" style="display: inline;">Edit Major &amp; Minor Selection <i class="icon-edit"></i></a>		
+		</p>
+		<br>
+		<h4> Help! This class I need to take isn't listed?!?</h4>
+		<p> Right now we aren't pulling from a complete class database so many classes aren't listed. We just don't have the access. <i>I'm sorry, Dave. I'm afraid I can't do that. </i> </p>
+		<br>
+		<h4> None of these answered my questions :( </h4>
+		<p> Sorry about that. If you have further questions please <a href="/Contact"> Contact us. </a> We'll try to help you resolve them.
+		</p>
+		
+		</body>
+        <!-- 
+<ul>
         <li> Twitter Bootstrap </li>
         <li> Glyphicons for the beautiful icons</li>
         <li> Google App Engine for hosting </li>
         <li> Intro.js for the nifty intro.</li>
         
         </ul>
+ -->
         
         </div>
     </div>
@@ -99,6 +125,7 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
+<!-- 
 <script src="./home_files/jquery.js"></script>
 <script src="./home_files/bootstrap-transition.js"></script>
 <script src="./home_files/bootstrap-alert.js"></script>
@@ -113,3 +140,4 @@
 <script src="./home_files/bootstrap-carousel.js"></script>
 <script src="./home_files/bootstrap-typeahead.js"></script>
 
+ -->
