--- a/UCSC_Course_Planner/templates/login.html
+++ b/UCSC_Course_Planner/templates/login.html
@@ -78,6 +78,7 @@
                     {% endif %}
                     <li><a href="/About">About</a></li>
                     <li><a href="/Contact">Contact</a></li>
+                    <li ><a href="/help">Help</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
