--- a/UCSC_Course_Planner/templates/contact.html
+++ b/UCSC_Course_Planner/templates/contact.html
@@ -51,6 +51,7 @@
                     {% endif %}
                     <li><a href="/About">About</a></li>
                     <li class="active"><a href="/Contact">Contact</a></li>
+                    <li ><a href="/help">Help</a></li>
                 </ul>
                 <form class="navbar-form pull-right">
 {#                    <input class="span2" type="text" placeholder="Email">#}
